# browserSwaps

./: .gitignore  LICENSE  README.md  index.html  nodemon.json  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
bots/: README.md  maker.mjs
contracts/: HTLC.sol  MockUSDT.sol
scripts/: compile-htlc.mjs  deploy-htlc.mjs  deploy-mock-usdt.mjs  new-key.mjs  sol-devnet-rehearsal.mjs
server/: autorefill.mjs  history.mjs  market.mjs  relayer.mjs  solRelayer.mjs  swapd.mjs
solana/: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
solana/programs/bswap-htlc/: Cargo.toml
solana/programs/bswap-htlc/src/: lib.rs
solana/tests/: htlc.ts
src/: config.test.ts  config.ts  main.ts  polyfills.ts  styles.css
src/brc/: adapter.ts
src/evm/: htlc.artifact.json  htlcAdapter.ts  mockusdt.artifact.json  wallet.ts
src/market/: market.ts  protocol.test.ts  protocol.ts
src/sol/: htlcAdapter.ts  wallet.ts
src/swap/: engine.test.ts  engine.ts  store.ts  types.ts
src/ui/: app.ts  format.ts
src/util/: hex.test.ts  hex.ts
