[package]
name = "bswap-htlc"
version = "0.1.0"
description = "BrowserSwaps hashed-timelock escrow for SPL tokens"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "bswap_htlc"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
